
- Don't replace colons by slashes in canonPath() on Mac OS X
  (SF.net bug #1488911 - Eric Le Lay - r17754)

- Fix Angle brackets showing up in plugin descriptions in plugin manager
  (SF.net bug #1963667 - Eric Le Lay)

- Fix SOCKS proxy accessing wrong property.
  Therefore, SOCKS proxy was never getting enabled.
  (SF.net patch #2820969 - Milutin Jovanović)

}}}
{{{ API changes

- Introduction of a new Threadpool using JDK's ExecutorService.
  It's api are added to ThreadUtilities, it is preferable to use it instead
  of the current VFSManager's threadpool. (Matthieu Casanova)

- Made method TextUtilities.getCharType() public (Matthieu Casanova)

- Method MiscUtilities.formatFileSize() moved to StandardUtilities
  (Matthieu Casanova)

- New method E ServiceManager.getService(Class<E> clazz, String name) to get
  service instance (Matthieu Casanova)

- Register api changed, it now contains Transferable (Matthieu Casanova)

- Added ThreadUtilities utility class (Matthieu Casanova)

- Removed deprecated objectfactory xml parser.

- File System Browser dynamic menu support (#2938170 - François Rey)

- Added a method for unregistering macro handlers: Macros.unregisterHandler().

- bufferSet api rewritten. Now each editPane have its own bufferSet,
  does not share it with other editPanes. The bufferset scope is the
  same for all EditPanes. (Matthieu Casanova)

- Status bar widget : it is now possible to use labels starting with letters
  in status bar. (Matthieu Casanova)

- Removed long deprecated TextArea#isDragInProgress() and
  TextArea#setDragInProgress(). (SF.net patch #2809776,2936146 - Kevin Hunter)

- EditBus.send() will now always deliver messages on the AWT thread, although
  it can be called from any thread. (Marcelo Vanzin)

- Added EditBus.sendAsync(): this just enqueues messages to be send over
  the EditBus as soon as the AWT thread is not busy, and returns immediately.
  (Marcelo Vanzin)
